--- a/Server/appsettings.Development.json
+++ b/Server/appsettings.Development.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "WorkingDirectory": "/workdir/threefold/qa/"
+  "AllowedHosts": "*",
+  "DockerSettings": {
+    "DockerEndpointWindows": "npipe://./pipe/docker_engine",
+    "DockerEndpointLinux": "unix:///var/run/docker.sock"
+  },
+  "FarmerBotSettings": {
+    "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder",
+    "ComposeFile": "docker-compose.yaml",
+    "ThreefoldNetworkFile": ".env",
+    "FarmerBotConfigFile": "\\config\\config.md"
+  }
 }
