--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DockerSettings": {
+    "DockerEndpointWindows": "npipe://./pipe/docker_engine",
+    "DockerEndpointLinux": "unix:///var/run/docker.sock"
+  },
+  "FarmerBotSettings": {
+    "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder",
+    "ComposeFile": "docker-compose.yaml",
+    "ThreefoldNetworkFile": ".env",
+    "FarmerBotConfigFile": "\\config\\config.md",
+    "FarmerBotLogFile": "\\config\\farmerbot.log"
+  }
 }
