--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -15,6 +15,7 @@
     "ComposeFile": "docker-compose.yaml",
     "ThreefoldNetworkFile": ".env",
     "FarmerBotConfigFile": "\\config\\config.md",
-    "FarmerBotLogFile": "\\config\\farmerbot.log"
+    "FarmerBotLogFile": "\\config\\farmerbot.log",
+    "FarmerBotStatusInterval": 60
   }
 }
