--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -17,5 +17,8 @@
     "FarmerBotConfigFile": "\\config\\config.md",
     "FarmerBotLogFile": "\\config\\farmerbot.log",
     "FarmerBotStatusInterval": 60
+  },
+  "SecuritySettings": {
+    "DontShowEnv": false
   }
 }
