tfapi start classes

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -18,6 +18,15 @@
     "FarmerBotLogFile": "\\config\\farmerbot.log",
     "FarmerBotStatusInterval": 60
   },
+  "ThreefoldFarmSettings": {
+    "FarmId": 158,
+    "Network": "qa",
+    "NetworkRelay": "" 
+  },
+  "ThreefoldApiSettings": {
+    "GraphQl": "https://graphql.qa.grid.tf/graphql",
+    "GridProxy": "https://gridproxy.grid.tf/"
+  },
   "SecuritySettings": {
     "DontShowEnv": false
   }
