--- a/Server/appsettings.Development.json
+++ b/Server/appsettings.Development.json
@@ -14,6 +14,26 @@
     "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder",
     "ComposeFile": "docker-compose.yaml",
     "ThreefoldNetworkFile": ".env",
-    "FarmerBotConfigFile": "\\config\\config.md"
+    "FarmerBotConfigFile": "\\config\\config.md",
+    "FarmerBotLogFile": "\\config\\farmerbot.log",
+    "FarmerBotStatusInterval": 60,
+    "ContainerNames": [
+      "farmerbot",
+      "redis",
+      "rmbpeer",
+      "grid3_client"
+    ]
+  },
+  "ThreefoldFarmSettings": {
+    "FarmId": 158,
+    "Network": "qa",
+    "NetworkRelay": ""
+  },
+  "ThreefoldApiSettings": {
+    "GraphQl": "https://graphql.qa.grid.tf/graphql",
+    "GridProxy": "https://gridproxy.grid.tf/"
+  },
+  "SecuritySettings": {
+    "DontShowEnv": false
   }
 }
