--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -6,9 +6,17 @@
     }
   },
   "AllowedHosts": "*",
+  "GeneralSettings": {
+    "CancelationTimeout": 300000,
+    "ServerUpdateInterval": 60
+  },
   "DockerSettings": {
     "DockerEndpointWindows": "npipe://./pipe/docker_engine",
-    "DockerEndpointLinux": "unix:///var/run/docker.sock"
+    "DockerEndpointLinux": "unix:///var/run/docker.sock",
+    "DockerRunCommand": "compose up -d",
+    "DockerDownCommand": "compose down",
+    "DockerLogCommand": "compose logs -f"
+
   },
   "FarmerBotSettings": {
     "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder",
@@ -16,18 +24,28 @@
     "ThreefoldNetworkFile": ".env",
     "FarmerBotConfigFile": "\\config\\config.md",
     "FarmerBotLogFile": "\\config\\farmerbot.log",
-    "FarmerBotStatusInterval": 60
+    "FarmerBotStatusInterval": 60,
+    "ContainerNames": [
+      "farmerbot",
+      "redis",
+      "rmbpeer",
+      "grid3_client"
+    ]
   },
   "ThreefoldFarmSettings": {
     "FarmId": 158,
     "Network": "qa",
-    "NetworkRelay": "" 
+    "NetworkRelay": ""
   },
   "ThreefoldApiSettings": {
     "GraphQl": "https://graphql.qa.grid.tf/graphql",
-    "GridProxy": "https://gridproxy.grid.tf/"
+    "GridProxy": "https://gridproxy.grid.tf/",
+    "ApiCallInterval": 60
   },
   "SecuritySettings": {
     "DontShowEnv": false
+  },
+  "NotificationSettings": {
+    "GuiNotification": true
   }
 }
