much new, changed and fixed

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,10 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "GeneralSettings": {
     "CancelationTimeout": 300000,
@@ -19,33 +13,61 @@
 
   },
   "FarmerBotSettings": {
-    "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder",
-    "ComposeFile": "docker-compose.yaml",
-    "ThreefoldNetworkFile": ".env",
-    "FarmerBotConfigFile": "\\config\\config.md",
-    "FarmerBotLogFile": "\\config\\farmerbot.log",
     "FarmerBotStatusInterval": 60,
-    "ContainerNames": [
-      "farmerbot",
-      "redis",
-      "rmbpeer",
-      "grid3_client"
+    "Bots": [
+      {
+        "BotName": "Test",
+        "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder",
+        "ComposeFile": "docker-compose.yaml",
+        "ThreefoldNetworkFile": ".env",
+        "FarmerBotConfigFile": "\\config\\config.md",
+        "FarmerBotLogFile": "\\config\\farmerbot.log",
+        "ContainerNames": [
+          "farmerbot",
+          "redis",
+          "rmbpeer",
+          "grid3_client"
+        ],
+        "FarmId": 158,
+        "Network": "qa",
+        "NetworkRelay": ""
+      }
     ]
   },
-  "ThreefoldFarmSettings": {
-    "FarmId": 158,
-    "Network": "qa",
-    "NetworkRelay": ""
-  },
-  "ThreefoldApiSettings": {
-    "GraphQl": "https://graphql.qa.grid.tf/graphql",
-    "GridProxy": "https://gridproxy.grid.tf/",
-    "ApiCallInterval": 60
-  },
-  "SecuritySettings": {
-    "DontShowEnv": false
-  },
-  "NotificationSettings": {
-    "GuiNotification": true
-  }
+  "ThreefoldApiSettings": [
+    {
+      "Net": "qa",
+      "GraphQl": "https://graphql.qa.grid.tf/graphql",
+      "GridProxy": "https://gridproxy.qa.grid.tf/",
+      "ApiCallInterval": 60
+    },
+    {
+      "Net": "main",
+      "GraphQl": "https://graphql.grid.tf/graphql",
+      "GridProxy": "https://gridproxy.grid.tf/",
+      "ApiCallInterval": 60
+    },
+    {
+      "Net": "test",
+      "GraphQl": "https://graphql.test.grid.tf/graphql",
+      "GridProxy": "https://gridproxy.test.grid.tf/",
+      "ApiCallInterval": 60
+    },
+    {
+      "Net": "dev",
+      "GraphQl": "https://graphql.dev.grid.tf/graphql",
+      "GridProxy": "https://gridproxy.dev.grid.tf/",
+      "ApiCallInterval": 60
+    }
+  ],
+    "SecuritySettings"
+    :
+    {
+      "DontShowEnv": false
+    },
+    "NotificationSettings"
+    :
+    {
+      "GuiNotification": true
+    }
 }
