--- a/Shared/FarmerbotWebUI.Shared.csproj
+++ b/Shared/FarmerbotWebUI.Shared.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Docker.DotNet" Version="3.125.13" />
+    <PackageReference Include="Markdig" Version="0.31.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="Radzen.Blazor" Version="4.8.4" />
     <PackageReference Include="YamlDotNet" Version="13.0.2" />
