--- a/Server/appsettings.Development.json
+++ b/Server/appsettings.Development.json
@@ -1,39 +1,86 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
+  "GeneralSettings": {
+    "CancelationTimeout": 300000,
+    "ServerUpdateInterval": 60
+  },
   "DockerSettings": {
     "DockerEndpointWindows": "npipe://./pipe/docker_engine",
-    "DockerEndpointLinux": "unix:///var/run/docker.sock"
+    "DockerEndpointLinux": "unix:///var/run/docker.sock",
+    "DockerRunCommand": "compose up -d",
+    "DockerDownCommand": "compose down",
+    "DockerLogCommand": "compose logs -f"
+
   },
   "FarmerBotSettings": {
-    "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder",
-    "ComposeFile": "docker-compose.yaml",
-    "ThreefoldNetworkFile": ".env",
-    "FarmerBotConfigFile": "\\config\\config.md",
-    "FarmerBotLogFile": "\\config\\farmerbot.log",
     "FarmerBotStatusInterval": 60,
-    "ContainerNames": [
-      "farmerbot",
-      "redis",
-      "rmbpeer",
-      "grid3_client"
+    "Bots": [
+      {
+        "BotName": "qa",
+        "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder\\Farm_qa",
+        "ComposeFile": "docker-compose.yaml",
+        "ThreefoldNetworkFile": ".env",
+        "FarmerBotConfigFile": "\\config\\config.md",
+        "FarmerBotLogFile": "\\config\\farmerbot.log",
+        "ContainerNames": [
+          "farmerbot",
+          "redis",
+          "rmbpeer",
+          "grid3_client"
+        ],
+        "FarmId": 158,
+        "Network": "qa",
+        "NetworkRelay": ""
+      },
+      {
+        "BotName": "test",
+        "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder\\Farm_test",
+        "ComposeFile": "docker-compose.yaml",
+        "ThreefoldNetworkFile": ".env",
+        "FarmerBotConfigFile": "\\config\\config.md",
+        "FarmerBotLogFile": "\\config\\farmerbot.log",
+        "ContainerNames": [
+          "farmerbot",
+          "redis",
+          "rmbpeer",
+          "grid3_client"
+        ],
+        "FarmId": 276,
+        "Network": "test",
+        "NetworkRelay": ""
+      }
     ]
   },
-  "ThreefoldFarmSettings": {
-    "FarmId": 158,
-    "Network": "qa",
-    "NetworkRelay": ""
-  },
-  "ThreefoldApiSettings": {
-    "GraphQl": "https://graphql.qa.grid.tf/graphql",
-    "GridProxy": "https://gridproxy.grid.tf/"
-  },
+  "ThreefoldApiSettings": [
+    {
+      "Net": "qa",
+      "GraphQl": "https://graphql.qa.grid.tf/graphql",
+      "GridProxy": "https://gridproxy.qa.grid.tf/",
+      "ApiCallInterval": 60
+    },
+    {
+      "Net": "main",
+      "GraphQl": "https://graphql.grid.tf/graphql",
+      "GridProxy": "https://gridproxy.grid.tf/",
+      "ApiCallInterval": 60
+    },
+    {
+      "Net": "test",
+      "GraphQl": "https://graphql.test.grid.tf/graphql",
+      "GridProxy": "https://gridproxy.test.grid.tf/",
+      "ApiCallInterval": 60
+    },
+    {
+      "Net": "dev",
+      "GraphQl": "https://graphql.dev.grid.tf/graphql",
+      "GridProxy": "https://gridproxy.dev.grid.tf/",
+      "ApiCallInterval": 60
+    }
+  ],
   "SecuritySettings": {
     "DontShowEnv": false
+  },
+  "NotificationSettings": {
+    "GuiNotification": true
   }
 }
