--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -16,8 +16,8 @@
     "FarmerBotStatusInterval": 60,
     "Bots": [
       {
-        "BotName": "Test",
-        "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder",
+        "BotName": "qa",
+        "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder\\Farm_qa",
         "ComposeFile": "docker-compose.yaml",
         "ThreefoldNetworkFile": ".env",
         "FarmerBotConfigFile": "\\config\\config.md",
@@ -30,6 +30,23 @@
         ],
         "FarmId": 158,
         "Network": "qa",
+        "NetworkRelay": ""
+      },
+      {
+        "BotName": "test",
+        "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder\\Farm_test",
+        "ComposeFile": "docker-compose.yaml",
+        "ThreefoldNetworkFile": ".env",
+        "FarmerBotConfigFile": "\\config\\config.md",
+        "FarmerBotLogFile": "\\config\\farmerbot.log",
+        "ContainerNames": [
+          "farmerbot",
+          "redis",
+          "rmbpeer",
+          "grid3_client"
+        ],
+        "FarmId": 276,
+        "Network": "test",
         "NetworkRelay": ""
       }
     ]
