some changes and fixes for nodestatus

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -13,7 +13,8 @@
 
   },
   "FarmerBotSettings": {
-    "FarmerBotStatusInterval": 60,
+    "FarmerBotStatusInterval": 10,
+    "NodeStatusInterval": 60,
     "Bots": [
       {
         "BotName": "qa",
