fixed settings class and many changes to nodestatus

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -2,7 +2,8 @@
   "AllowedHosts": "*",
   "GeneralSettings": {
     "CancelationTimeout": 300000,
-    "ServerUpdateInterval": 60
+    "ServerUpdateInterval": 60,
+    "ApiCallInterval": 60
   },
   "DockerSettings": {
     "DockerEndpointWindows": "npipe://./pipe/docker_engine",
@@ -56,26 +57,22 @@
     {
       "Net": "qa",
       "GraphQl": "https://graphql.qa.grid.tf/graphql",
-      "GridProxy": "https://gridproxy.qa.grid.tf/",
-      "ApiCallInterval": 60
+      "GridProxy": "https://gridproxy.qa.grid.tf/"
     },
     {
       "Net": "main",
       "GraphQl": "https://graphql.grid.tf/graphql",
-      "GridProxy": "https://gridproxy.grid.tf/",
-      "ApiCallInterval": 60
+      "GridProxy": "https://gridproxy.grid.tf/"
     },
     {
       "Net": "test",
       "GraphQl": "https://graphql.test.grid.tf/graphql",
-      "GridProxy": "https://gridproxy.test.grid.tf/",
-      "ApiCallInterval": 60
+      "GridProxy": "https://gridproxy.test.grid.tf/"
     },
     {
       "Net": "dev",
       "GraphQl": "https://graphql.dev.grid.tf/graphql",
-      "GridProxy": "https://gridproxy.dev.grid.tf/",
-      "ApiCallInterval": 60
+      "GridProxy": "https://gridproxy.dev.grid.tf/"
     }
   ],
     "SecuritySettings"
