much new on nodestatus page, grid view

--- a/Server/appsettings.Development.json
+++ b/Server/appsettings.Development.json
@@ -50,6 +50,23 @@
         "FarmId": 276,
         "Network": "test",
         "NetworkRelay": ""
+      },
+      {
+        "BotName": "dev",
+        "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder\\Farm_dev",
+        "ComposeFile": "docker-compose.yaml",
+        "ThreefoldNetworkFile": ".env",
+        "FarmerBotConfigFile": "\\config\\config.md",
+        "FarmerBotLogFile": "\\config\\farmerbot.log",
+        "ContainerNames": [
+          "farmerbot",
+          "redis",
+          "rmbpeer",
+          "grid3_client"
+        ],
+        "FarmId": 4211,
+        "Network": "dev",
+        "NetworkRelay": ""
       }
     ]
   },
