much new with configureBot  and fixes

--- a/Server/appsettings.Development.json
+++ b/Server/appsettings.Development.json
@@ -3,7 +3,15 @@
   "GeneralSettings": {
     "CancelationTimeout": 300000,
     "ServerUpdateInterval": 60,
-    "ApiCallInterval": 60
+    "ApiCallInterval": 60,
+    "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder\\Farm_qa",
+    "DefaultComposeFile": "docker-compose.yaml",
+    "DefaultEnvFile": ".env",
+    "DefaultFarmerBotConfigFile": "\\config\\config.md",
+    "DefaultFarmerBotLogFile": "\\config\\farmerbot.log",
+    "WebUIGitHub": "https://github.com/fl0wm0ti0n/FarmerbotWebUI",
+    "FarmerBotGitHub": "https://github.com/threefoldtech/farmerbot",
+    "DefaultComposeDlUrl": "https://raw.githubusercontent.com/threefoldtech/farmerbot/development/docker-compose.yaml"
   },
   "DockerSettings": {
     "DockerEndpointWindows": "npipe://./pipe/docker_engine",
@@ -19,9 +27,10 @@
     "Bots": [
       {
         "BotName": "qa",
+        "BotId": 1,
         "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder\\Farm_qa",
         "ComposeFile": "docker-compose.yaml",
-        "ThreefoldNetworkFile": ".env",
+        "EnvFile": ".env",
         "FarmerBotConfigFile": "\\config\\config.md",
         "FarmerBotLogFile": "\\config\\farmerbot.log",
         "ContainerNames": [
@@ -36,9 +45,10 @@
       },
       {
         "BotName": "test",
+        "BotId": 2,
         "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder\\Farm_test",
         "ComposeFile": "docker-compose.yaml",
-        "ThreefoldNetworkFile": ".env",
+        "EnvFile": ".env",
         "FarmerBotConfigFile": "\\config\\config.md",
         "FarmerBotLogFile": "\\config\\farmerbot.log",
         "ContainerNames": [
@@ -53,9 +63,10 @@
       },
       {
         "BotName": "dev",
+        "BotId": 3,
         "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder\\Farm_dev",
         "ComposeFile": "docker-compose.yaml",
-        "ThreefoldNetworkFile": ".env",
+        "EnvFile": ".env",
         "FarmerBotConfigFile": "\\config\\config.md",
         "FarmerBotLogFile": "\\config\\farmerbot.log",
         "ContainerNames": [
@@ -66,6 +77,24 @@
         ],
         "FarmId": 4211,
         "Network": "dev",
+        "NetworkRelay": ""
+      },
+      {
+        "BotName": "main",
+        "BotId": 4,
+        "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder\\Farm_main",
+        "ComposeFile": "docker-compose.yaml",
+        "EnvFile": ".env",
+        "FarmerBotConfigFile": "\\config\\config.md",
+        "FarmerBotLogFile": "\\config\\farmerbot.log",
+        "ContainerNames": [
+          "farmerbot",
+          "redis",
+          "rmbpeer",
+          "grid3_client"
+        ],
+        "FarmId": 403,
+        "Network": "main",
         "NetworkRelay": ""
       }
     ]
