--- a/Client/FarmerbotWebUI.Client.csproj
+++ b/Client/FarmerbotWebUI.Client.csproj
@@ -9,9 +9,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.13" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.13" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.13" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Radzen.Blazor" Version="4.8.4" />
+    <PackageReference Include="Radzen.Blazor" Version="4.13.2" />
   </ItemGroup>
 
   <ItemGroup>
