--- a/Server/appsettings.Development.json
+++ b/Server/appsettings.Development.json
@@ -78,24 +78,6 @@
         "FarmId": 4211,
         "Network": "dev",
         "NetworkRelay": ""
-      },
-      {
-        "BotName": "main",
-        "BotId": 4,
-        "WorkingDirectory": "C:\\flowGit\\c-sharp-projects\\FarmerbotWebUI\\ComposeTestFolder\\Farm_main",
-        "ComposeFile": "docker-compose.yaml",
-        "EnvFile": ".env",
-        "FarmerBotConfigFile": "\\config\\config.md",
-        "FarmerBotLogFile": "\\config\\farmerbot.log",
-        "ContainerNames": [
-          "farmerbot",
-          "redis",
-          "rmbpeer",
-          "grid3_client"
-        ],
-        "FarmId": 403,
-        "Network": "main",
-        "NetworkRelay": ""
       }
     ]
   },
@@ -103,22 +85,26 @@
     {
       "Net": "qa",
       "GraphQl": "https://graphql.qa.grid.tf/graphql",
-      "GridProxy": "https://gridproxy.qa.grid.tf/"
+      "GridProxy": "https://gridproxy.qa.grid.tf/",
+      "NodeMintingApi": "https://alpha.minting.tfchain.qa.grid.tf/api/v1/node"
     },
     {
       "Net": "main",
       "GraphQl": "https://graphql.grid.tf/graphql",
-      "GridProxy": "https://gridproxy.grid.tf/"
+      "GridProxy": "https://gridproxy.grid.tf/",
+      "NodeMintingApi": "https://alpha.minting.tfchain.grid.tf/api/v1/node"
     },
     {
       "Net": "test",
       "GraphQl": "https://graphql.test.grid.tf/graphql",
-      "GridProxy": "https://gridproxy.test.grid.tf/"
+      "GridProxy": "https://gridproxy.test.grid.tf/",
+      "NodeMintingApi": "https://alpha.minting.tfchain.test.grid.tf/api/v1/node"
     },
     {
       "Net": "dev",
       "GraphQl": "https://graphql.dev.grid.tf/graphql",
-      "GridProxy": "https://gridproxy.dev.grid.tf/"
+      "GridProxy": "https://gridproxy.dev.grid.tf/",
+      "NodeMintingApi": "https://alpha.minting.tfchain.dev.grid.tf/api/v1/node"
     }
   ],
   "SecuritySettings": {
